--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,7 @@
 
 .section-button {
     background: #ffffff4f;
+    box-shadow: 7px 7px 10px #000000c1;
     width: 600px;
     height: 450px;
     border-radius: 10px;
@@ -21,15 +22,16 @@
     align-items: center;
 }
 
-.button > a {
+.button {
     padding: 20px 30px;
     cursor: pointer;
     font-family: Verdana, 'Geneva', Tahoma, sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
-    background-color: #806154;
-    box-shadow: 5px 5px 10px #fbe3a77e;
-    border-radius: 13px;
+    border: solid 2px #000;
+    background-image: linear-gradient(135deg, #fbe3a7,#7C5848 , #5F372F);
+    box-shadow: 6px 6px 10px #00000072;
+    border-radius: 8px;
 }
 
 .section-button .fa-github-square, .section-button .fa-instagram-square, .section-button .fa-linkedin {
